--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.6"
   },
